solved alignment problem

--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ box-sizing: border-box;
 .tasteLeft h2{
     font-weight: 700;
     font-size: 38px;
-    padding-right: 280px;
+    padding-right: 220px;
     line-height: 50px;
     margin-bottom: 30px;
     color: #ffffff;
